--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.toonflix">
-    <application android:label="ToonFlix"
+    <application android:label="Toonflix"
                  android:name="${applicationName}"
                  android:icon="@mipmap/ic_launcher">
         <activity android:name=".MainActivity"
