--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.shareinvest.algorithmic.mobile">
+          package="com.shareinvest.virtual.app">
     <application android:label="Toonflix"
                  android:name="${applicationName}"
                  android:icon="@mipmap/ic_launcher">
